--- a/views/list/index.ejs
+++ b/views/list/index.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelNest</title>
-</head>
+<%- layout("/layouts/boilerplate") %><!-- no = -->
+<!--/ wrto views as its set for view ejs path-->
 <body>
     <h3>all list</h3>
     <!--instead of anchor-->
@@ -17,4 +12,4 @@
         <% } %>
     </ul>
 </body>
-</html>
+
