--- a/views/list/edit.ejs
+++ b/views/list/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelNest</title>
-</head>
+<%- layout("/layouts/boilerplate") %>
 <body>
     <a href="/list">HOME</a>
     <h3>Edit List : </h3>
@@ -24,4 +18,3 @@
         <button>Edit List</button>
     </form>
 </body>
-</html>
